second changes in last api resautant query search

--- a/src/functions/com/biz/postgres/restaurant/search.yaml
+++ b/src/functions/com/biz/postgres/restaurant/search.yaml
@@ -20,7 +20,10 @@ tasks:
                 couponCode: {
                   equals: couponCode
                 }
-              };
+              };  
+            }
+            else if (couponCode !== ""){
+              include.menuItems={}
             }
             return { where, include };
           }%>
